# qrlib

./: .gitignore  AGENTS.md  LICENSE  README.md  mkdocs.yml  open-docs.html  pyproject.toml  setup.py
.agents/skills/github-flow-change/: SKILL.md
.agents/skills/qrlib-library-authoring/: SKILL.md
.agents/skills/qrlib-spec-driven-change/: SKILL.md
.github/workflows/: ci.yml  docs.yml
doc/source/: code.file_path.rst  code.multi_process.rst  conf.py
docs/: architecture.md  getting-started.md  index.md
docs/api/: geometry.md  index.md  metrics.md
docs/concepts/: architecture.md  index.md  spec-driven-development.md
docs/developer/design/: feature-template.md  (+5 more)
docs/geometry/: index.md  normalization.md
docs/tutorials/: geometry-normalization-workflow.md  index.md  point-cloud-metrics-workflow.md
examples/: geometry_workflow.py  metrics_workflow.py  quickstart.py
qrlib/: __init__.py  command_argument.py  utils.py
qrlib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
qrlib/design_pattern/: adapter.py
qrlib/file_path/: __init__.py  functions.py  path_searcher.py
qrlib/multi_process/: __init__.py  base_multi_process_runner.py  command_runner.py  runner.py
qrlib/visulization/: __init__.py  image_composer.py
scripts/: README.md  check.sh
src/qrlib/: __init__.py
tests/integration/: test_package_layout.py  test_repository_contract.py
tests/unit/: test_geometry_contract.py  test_geometry_normalization.py  test_geometry_torch.py  test_geometry_types.py  test_imports.py  test_metrics_contract.py  test_metrics_numpy.py  test_metrics_torch.py
(+20 files in other folders)
