[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qrlib"
version = "0.1.0"
description = "Reusable 3D deep learning utilities for research projects."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "pre-commit",
  "pytest",
  "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/qrlib"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
