[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qrlib"
version = "0.2.0"
description = "Reusable 3D deep learning utilities for research projects."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "pre-commit>=3.7",
  "pytest>=8.2",
  "ruff>=0.9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
